kubernetes/canary/ui-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  labels:
    app: ui
    visualize: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui
      version: "1.0"
  template:
    metadata:
      labels:
        app: ui
        version: "1.0"
        visualize: "true"
      annotations:
        visualizer/uses: message-service,guestbook-service,redis
    spec:
      containers:
      - name: ui
        image: 969692727193.dkr.ecr.us-east-1.amazonaws.com/dmin-ui:v1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        ports:
        - name: http
          containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  name: ui-v1
  labels:
    app: ui
    visualize: "true"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: ui
    version: "1.0"
