kubernetes/canary/ui-ingress-canary.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ui-ingress-canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: ui-v2
              servicePort: 80
